--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@ Changelog for Toggle Summary
 1.8
 Updated reloadApi & LegacyPrefs APIs.
 Set minimum version to Thunderbird 115.0.
-Set maximum version to Thunderbird 127.0.
+Set maximum version to Thunderbird 127.*.
 
 1.7
 Changed keyboard shortcut for macOS to Command+Shift+H.
